# bearcove.eu

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  README.md  home.json  package-lock.json  package.json  pnpm-lock.yaml
.config/: dodeca.styx
.github/workflows/: website.yml
.zed/: settings.json
content/: _index.md  legal.md
docs/: dioxus.md
sass/: main.scss
src/: bundle.ts  main.rs  main.scss
templates/: base.html  index.html  macros.html.jinja  main-style.css.jinja  page.html  page.html.jinja  section.html
