[package]
name = "bearcove-eu"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
dioxus-motion = { git = "https://github.com/fasterthanlime/dioxus-motion.git", branch = "rc" }

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]

[dev-dependencies]

[build-dependencies]
cc = "1.0"
